tests/baselines/reference/parserComputedPropertyName1.errors.txt
parserComputedPropertyName1.ts(1,12): error TS2304: Cannot find name 'e'.
parserComputedPropertyName1.ts(1,15): error TS1005: ':' expected.


==== parserComputedPropertyName1.ts (2 errors) ====
    var v = { [e] };
               ~
!!! error TS2304: Cannot find name 'e'.
                  ~
!!! error TS1005: ':' expected.